[bug-1222637] Fixed horizontal scrolling on private-browsing.less
[bug-1222637] Fixed horizontal scrolling on private-browsing.less

--- a/media/css/firefox/private_browsing/private-browsing.less
+++ b/media/css/firefox/private_browsing/private-browsing.less
@@ -7,6 +7,11 @@
 /*-------------------------------------------------------------------------*/
 // Common
 
+html, body{
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 #wrapper {
     border-top: 2px solid #fff;
     background-color: @mozIDBlue;
